<resources>
    <string name="app_name">Ride4U</string>
    <string name="ride4u">Ride4U</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="src">From where?</string>
    <string name="dest">Where to?</string>
    <string name="seats">Number of seats</string>
    <string name="date_picker_button">Select date</string>
    <string name="time_picker_button">Select time</string>
    <string name="submit">Submit</string>
    <string name="title_activity_login23">LoginActivity23</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="postContent">Leaving from: %1$s \nGoing to: %2$s \nDate: %3$s \nTime: %4$s \nAvailable Seats: %5$s / %6$s \nDescription: %7$s</string>
    <string name="fullName">%1$s %2$s</string>
    <string name="id">%1$s</string>
    <string name="costNIS">%1$s NIS</string>
    <string name="activeRides">Active Rides</string>
    <string name="historyRides">History Rides</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>