<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Fragment.AddPostFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Drive Details"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/src">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/src"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:inputType="none">

        </androidx.appcompat.widget.AppCompatAutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/dest">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/dest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:inputType="none">

        </androidx.appcompat.widget.AppCompatAutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="number"
        android:digits="0123456789:"
        android:id="@+id/seats_number"
        android:hint="Number of seats"
        android:background="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    </com.google.android.material.textfield.TextInputEditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/date_picker_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/date_picker_button"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/edittext_background"
        style="?android:spinnerStyle"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/time_picker_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/time_picker_button"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:background="@drawable/edittext_background"
        style="?android:spinnerStyle"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="Description"
        android:background="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    </com.google.android.material.textfield.TextInputEditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/background_button2"
        android:text="@string/submit" />

</LinearLayout>